<resources>
    <string name="app_name" translatable="false">HoanKiemAir</string>

    <string name="ip_text_hint">Host IP address</string>
    <string name="button_connect">Connect</string>

    <string name="label_category_simulation_params">Simulation parameters</string>
    <string name="label_category_display">Display</string>

    <string name="label_num_cars">Number of cars</string>
    <string name="label_num_motorbikes">Number of motorbikes</string>
    <string name="label_close_roads">Road management</string>

    <string name="label_display_mode">Display mode</string>
    <string name="radio_button_traffic">Traffic</string>
    <string name="radio_button_pollution">Pollution</string>
    <string name="radio_button_no_close_roads">No closed roads</string>
    <string name="radio_button_scenario_1">Pedestrian zone active</string>
    <string name="radio_button_scenario_2">Extension plan</string>
    <string name="language_setting">Language</string>
    <string name="toast_blank_ip">Fill in the IP address</string>
    <string name="toast_connection_established">Connection established</string>
    <string name="toast_connection_failed">Connection failed</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="reset_params_prompt" translatable="false">Do you want to reset all parameters to default?</string>
    <string name="name_of_splash" translatable="false">Hoan Kiem Air Controller</string>
    <string name="statistic" translatable="false">Statistic Chart</string>
    <string name="daytime" translatable="false">Daytime</string>
    <string name="daytime_mode" translatable="false">Daytime Mode</string>
    <string name="daytime_off" translatable="false">Off</string>
    <string name="daytime_on" translatable="false">On</string>
    <string name="button_reconnect" translatable="false">Reconnect</string>
    <string name="title_activity_maps" translatable="false">HoanKiem Air Area</string>
    <string name="map" translatable="false">Map</string>
    <string name="ip_address" translatable="false">192.168.0.164</string>
    <string name="title_activity_maps2" translatable="false">MapsActivity2</string>
</resources>
