<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/label_category_simulation_params"
            android:textColor="@color/primaryColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/label_num_cars"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">



            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/seekBar_for_cars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:dsb_indicatorColor="@color/dsb_progress_color"
                app:dsb_max="2000"
                app:dsb_min="0"
                app:dsb_progressColor="@color/dsb_progress_color"
                app:dsb_rippleColor="@color/dsb_progress_color"
                app:dsb_trackColor="@color/dsb_progress_color" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/label_num_motorbikes"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">


            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/seekBar_for_motobikes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:dsb_indicatorColor="@color/dsb_progress_color"
                app:dsb_max="2000"
                app:dsb_min="0"
                app:dsb_progressColor="@color/dsb_progress_color"
                app:dsb_rippleColor="@color/dsb_progress_color"
                app:dsb_trackColor="@color/dsb_progress_color" />



        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/label_close_roads"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">


            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                tools:context=".ui.MapsActivity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignBottom="@+id/map">

                <Button
                    android:id="@+id/draw_polygon"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Draw polygon" />

                <Button
                    android:id="@+id/clear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Clear" />
            </LinearLayout>

        </LinearLayout>
        <View
            style="@style/Divider"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/label_category_display"
            android:textColor="@color/primaryColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/label_display_mode"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp" />

        <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:id="@+id/radio_group_display_mode"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:checkedButton="@id/radio_button_traffic"
            android:orientation="horizontal"
            segmentedgroup:sc_border_width="2dp"
            segmentedgroup:sc_corner_radius="5dp"
            segmentedgroup:sc_tint_color="@color/primaryColor">

            <RadioButton
                android:id="@+id/radio_button_traffic"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onDisplayModeRadioButtonClicked"
                android:text="@string/radio_button_traffic"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_button_pollution"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onDisplayModeRadioButtonClicked"
                android:text="@string/radio_button_pollution"
                android:textSize="20sp" />
        </info.hoang8f.android.segmented.SegmentedGroup>

        <View
            style="@style/Divider"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/daytime"
            android:textColor="@color/primaryColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/daytime_mode"
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp" />

        <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:id="@+id/radio_button_daytime"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:checkedButton="@id/radio_button_off"
            android:orientation="horizontal"
            segmentedgroup:sc_border_width="2dp"
            segmentedgroup:sc_corner_radius="5dp"
            segmentedgroup:sc_tint_color="@color/primaryColor">

            <RadioButton
                android:id="@+id/radio_button_off"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onDaytimeClicked"
                android:text="@string/daytime_off"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_button_on"
                style="@style/RadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onDaytimeClicked"
                android:text="@string/daytime_on"
                android:textSize="20sp" />
        </info.hoang8f.android.segmented.SegmentedGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/statistic"
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/LineChart"
                android:layout_width="match_parent"
                android:layout_height="422dp" />
        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>